woops, forgot to commit some changes for comment overflow issue

--- a/client/sass/app/comment.scss
+++ b/client/sass/app/comment.scss
@@ -112,7 +112,11 @@
 
         .details {
           padding-left: 10px;
-          padding-right: 80px;
+          padding-right: 4.5em;
+
+          @media only screen and (min-width: 48em) {
+            padding-right: 5.2em;
+          }
           
           textarea {
             margin-top: 5px;
